<resources>
    <string name="app_name">Popular Movies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_synopsis_title">Synopsis</string>
    <string name="movies_user_rating">Ratings</string>
    <string name="movies_ratings_title">Rating</string>
    <string name="movies_release_date_title">Release Date</string>
    <string name="sort_order_main_title">Sort Order</string>
    <string name="pref_sort_key">key_sort</string>
    <string name="pref_sort_title">Choose a sort order</string>
    <string name="pref_sort_diag_title">Choose a sort order</string>
    <string name="pref_sort_value_topr">Top Rated</string>
    <string name="pref_sort_value_popr">Most Popular</string>
    <string name="pref_sort_entry_topr">top_rated</string>
    <string name="pref_sort_entry_popr">popular</string>
    <string name="pref_sort_default">popular</string>
    <string name="action_settings">Settings</string>
    <string name="default_ratings_desc">No ratings available</string>
    <string name="default_release_date_text">No release date available</string>
    <string name="title_MovieActivity_detail">Movie Details</string>
    <string name="title_SettingsActivity">Settings</string>
</resources>
